integration_tests/codegen_fail/fail/object/impl_argument_wrong_default_array.stderr
error[E0308]: mismatched types
 --> $DIR/impl_argument_wrong_default_array.rs:3:1
  |
3 | #[juniper::graphql_object]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an array with a fixed size of 2 elements, found one with 3 elements
  |
  = note: this error originates in the attribute macro `juniper::graphql_object` (in Nightly builds, run with -Z macro-backtrace for more info)
